attempted fix align text

--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,6 @@ nav a:hover{
   grid-template-columns: 1fr 3fr 3fr 1fr;
   grid-template-rows: auto auto auto auto;
   gap: 20px;
-  align-items: center;
-  justify-content: center;
 }
 
 header{
@@ -169,6 +167,8 @@ header{
   border: 10px solid black;
   padding: 30px;
   /*Your code here:*/
+  align-self: center;
+  justify-self: center;
 }
 
 
